--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,16 +1,26 @@
 asgiref==3.8.1
+attrs==24.2.0
 certifi==2024.7.4
 Django==4.0.3
 django-filter==23.5
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.2
+drf-spectacular-sidecar==2024.7.1
 elastic-transport==8.15.0
 elasticsearch==8.15.0
 gunicorn==21.2.0
+inflection==0.5.1
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 Markdown==3.7
 packaging==24.1
 PyJWT==2.9.0
 pyorient==1.5.5
 pyorientdb==1.0.0
+PyYAML==6.0.2
+referencing==0.35.1
+rpds-py==0.20.0
 sqlparse==0.5.1
+uritemplate==4.1.1
 urllib3==2.2.2
